# MDES2409-Master-Repo

./: PrototypeSystemCode.ino  README.md
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git copy/logs/: HEAD
Current Libraries copy/DetectionsBuffer/: DetectionsBuffer.cpp
Current Libraries copy/Gyro/: gyro.cpp  gyro.h
Current Libraries copy/MotorDriver/: MotorDriver.cpp  MotorDriver.h
Current Libraries copy/PixyLineDetect/: pixy_line_detection.cpp  pixy_line_detection.h
Current Libraries copy/RoboDriver/: RoboDriver.cpp  RoboDriver.h
Current Libraries copy/TimeManagement/: TimeManagement.h
Current Libraries copy/globalVariables/: globalVariables.h
Current Libraries/DetectionsBuffer/: DetectionsBuffer.cpp  DetectionsBuffer.h
Current Libraries/pathfinding/: CMakeLists.txt  pathfinding.cpp
DetectionsBuffer/: DetectionsBuffer.cpp  DetectionsBuffer.h
LineFollowTest/: LineFollowTest.ino
Manipulator Library/: Manipulator_Control.cpp  Manipulator_Control.h
MotorDriver/: gyro.h
New Libraries-Need Reformmating/: MotorDriver.h  TMP (1).h  gyro_blue.h  gyro_red.h  pixy_line_detection (1).h  robot_control.h  serial_communication.h
PixyLineDetect/: pixy_line_detection.h
PrototypeSystemCode/: PrototypeSystemCode.ino
PrototypeSystemCodew_Timing/: PrototypeSystemCodew_Timing.ino
RobotCode/: README.md  RobotCode.ino
SDP_LibraryTest/: SDP_LibraryTest.ino
Servo_UltraSonic/: Servo_UltraSonic.ino
TimeManagement/: TimeManagement.cpp  TimeManagement.h
rctest/: rctest.ino
sketch_feb18a/: sketch_feb18a.ino
(+59 files in other folders)
